# lyricstats

./: README.md  pyproject.toml
lyricstats/: __init__.py  main.py
